*eshell*~
Welcome to the Emacs shell

~/Project/epistasis/epi $ g++ main_in_gsl.cpp -o main_in_gsl.out -L/usr/lib/x86_64-linux-gnu -lgsl -lgslcblas -lm
main_in_gsl.cpp: In function ‘int main()’:
main_in_gsl.cpp:202:57: error: ‘df’ was not declared in this scope
        pvalue[ii] = 2*(t < 0 ? (1 - gsl_cdf_tdist_P(-t, df)) : (1 - gsl_cdf_tdist_P(t, df)));
                                                         ^
~/Project/epistasis/epi $ 
~/Project/epistasis/epi $ g++ main_in_gsl.cpp -o main_in_gsl.out -L/usr/lib/x86_64-linux-gnu -lgsl -lgslcblas -lm
~/Project/epistasis/epi $ ./gsl_const2.out
./gsl_const2.out: command not found
~/Project/epistasis/epi $ ./main_in_gsl.out
12497500 12497500
Done!0.556055
~/Project/epistasis/epi $ g++ main_in_gsl.cpp -o main_in_gsl.out -L/usr/lib/x86_64-linux-gnu -lgsl -lgslcblas -lm
~/Project/epistasis/epi $ ./main_in_gsl.out
12497500 12497500
1*r2.p.value
Done!0.542751
~/Project/epistasis/epi $ 
~/Project/epistasis/epi $ g++ main_in_gsl.cpp -o main_in_gsl.out -L/usr/lib/x86_64-linux-gnu -lgsl -lgslcblas -lm
~/Project/epistasis/epi $ ./main_in_gsl.out
12497500 12497500
Done!0.564602
~/Project/epistasis/epi $ 
~/Project/epistasis/epi $ g++ main_in_gsl.cpp -o main_in_gsl.out -L/usr/lib/x86_64-linux-gnu -lgsl -lgslcblas -lm
~/Project/epistasis/epi $ ./main_in_gsl.out
12497500 12497500
Done!0.550969
~/Project/epistasis/epi $ 
~/Project/epistasis/epi $ g++ main_in_gsl.cpp -o main_in_gsl.out -L/usr/lib/x86_64-linux-gnu -lgsl -lgslcblas -lm
~/Project/epistasis/epi $ ./main_in_gsl.out
12497500 12497500
Done!0.668263
~/Project/epistasis/epi $ 
~/Project/epistasis/epi $ g++ main_in_gsl.cpp -o main_in_gsl.out -L/usr/lib/x86_64-linux-gnu -lgsl -lgslcblas -lm
~/Project/epistasis/epi $ ./main_in_gsl.out
12497500 12497500
Done!0.561118
~/Project/epistasis/epi $ 
~/Project/epistasis/epi $ g++ main_in_gsl.cpp -o main_in_gsl.out -L/usr/lib/x86_64-linux-gnu -lgsl -lgslcblas -lm
~/Project/epistasis/epi $ 
~/Project/epistasis/epi $ g++ main_in_gsl.cpp -o main_in_gsl.out -L/usr/lib/x86_64-linux-gnu -lgsl -lgslcblas -lm
~/Project/epistasis/epi $ ./main_in_gsl.out
12497500 12497500
Done!0.557383
~/Project/epistasis/epi $ ./main_in_gsl.out
12497500 12497500
Done!0.564645
~/Project/epistasis/epi $ g++ main_in_gsl.cpp -o main_in_gsl.out -L/usr/lib/x86_64-linux-gnu -lgsl -lgslcblas -lm
~/Project/epistasis/epi $ ./main_in_gsl.out
12497500 12497500
Done!0.557992
~/Project/epistasis/epi $ 
~/Project/epistasis/epi $ g++ main_in_gsl.cpp -o main_in_gsl.out -L/usr/lib/x86_64-linux-gnu -lgsl -lgslcblas -lm
~/Project/epistasis/epi $ ./main_in_gsl.out
12497500 12497500
Done!3.72353
~/Project/epistasis/epi $ 